  - Replace NV_PixelDataRange with the more common ARB_PixelBufferObject 
    extension. Should help with output=opengl.
  - Reuse graphics window if possible instead of always creating a new one!
  - Add patches to work better when called by WINE:
    - support WINE style namemangling.
    - allow Z:\ to be moved to a different drive. 
  - Try to fix stuttering audio with opengl output on Linux. (or at least improve it. Linux users might need to increase the prebuffer option a bit)
  - Fix automake and autoconf problems.
  - Fix problems related to packed struct layouts.
  - Fix compilation on gcc 4.4 and gcc 4.6.1.
  - Fix compilation with -DPIC.
  - Hopefully fix crash on shutdown, when unknown condition is encountered.
  - Fix -lto with gcc.
  - Fix clang compliation with asm fpu core.
  - Fix mapper crash on startup and when changing the mapper key.
  - Fix compilation in VS2015.
  - Fix compilation on mingw64.
  - Fix compilation on Frisbee and newer clang.
  - Fix compilation machines that have X11 libraries installed, but use a SDL 
    without X11.
  - Fix a few problems relating to video capturing:
    - Writing out the index too often. (slowdown with longer captures)
    - Not being aware of when only the refresh rate changed.
  - Fix call order when bitshifting the return order (VS C /O2 builds).
  - Fix sign-extension error in S3 draw funcion, i.e. win3.1 analog clock.
  - Fix expanddot not caring about the size of the inputbuffer.
  - Some fixes for the debugger related to starting a program through debug.com.
  - Bring OS/2 port code up to date.
  - Reduce the amount of warning when compiling with quite a bit.
  - Allow 15/26/32 bits input to the opengl output.
  - Add cmd-q as exit key for macs.
  - Fix icon and titlebar on very old setups.
  - Fix off by one display size calculation errors with very large displays.
  - Fix out of bounds access the unused byte in the 32 bit colour value of the 
    hardware mouse cursor pixel was affected.