@@ -1,5 +1,5 @@
 .\"                                      Hey, EMACS: -*- nroff -*-
-.TH DOSBOX 1 "Feb 26, 2010"
+.TH DOSBOX 1 "Aug 30, 2018"
 .\" Please adjust this date whenever revising the manpage.
 .SH NAME
 dosbox \- an x86/DOS emulator with sound/graphics
@@ -216,9 +216,9 @@ either to create a new configfile or languagefile in this mode.
 The configuration file controls various settings of 
 .BR dosbox ": The amount of emulated memory,"
 the emulated soundcards and many
-.RI "more things. It futher allows acces to " AUTOEXEC.BAT .
+.RI "more things. It further allows acces to " AUTOEXEC.BAT .
 .LP
-The language file controls all visible ouput of the internal commands and
+The language file controls all visible output of the internal commands and
 the internal dos. 
 .RB "See the section " FILES " for more information."
 .TP 
@@ -335,7 +335,7 @@ gets saved/recorded !
 capacity, it will produce the same effect as slowing down the emulation.
 This maximum will vary from computer to computer, there is no standard.
 .SH "SYSTEM REQUIREMENTS"
-Fast machine. My guess would be pentium\-2 400+ to get decent emulation
+Fast machine. My guess would be Pentium\-2 400+ to get decent emulation
 of games written for an 286 machine.
 For protected mode games a 1 Ghz machine is recommended and don't expect
 them to run fast though!! Be sure to read the next section on how to speed
